JumpScript/tests/baselines/reference/emptyModuleName.errors.txt
tests/cases/compiler/emptyModuleName.jump(1,20): error TS2307: Cannot find module ''.


==== tests/cases/compiler/emptyModuleName.jump (1 errors) ====
    import * as A from "";
                       ~~
!!! error TS2307: Cannot find module ''.
    class B extends A {
    }